# chatter

./: .env.example  .env.test  .env.test.local  .gitignore  .pre-commit-config.yaml  =0.20.0  =2.11.7  ANALYSIS_REPORT.md  API_KEY_HASH_FIX.md  AUTH_API_DEEP_DIVE_REPORT.md  BACKEND_CONVERSION_ANALYSIS_SUMMARY.md  BACKEND_INTEGRATION_ANALYSIS.md  BACKEND_REVIEW.md  BEFORE_AFTER_COMPARISON.md  BUG_ANALYSIS_SUMMARY.md  BUILTIN_TOOLS_DATABASE_INTEGRATION.md  CACHE_OPTIMIZATION_SUMMARY.md  CHATTER_CORE_ANALYSIS_REPORT.md  CHAT_API_SWIMLANE_ASCII.md  CHAT_PAGE_EXECUTIVE_SUMMARY.md  CHAT_PAGE_IMPROVEMENT_REPORT.md  CHAT_PAGE_REPORTS_INDEX.md  CHAT_PAGE_TECHNICAL_ANALYSIS.md  CHAT_PAGE_UI_IMPROVEMENTS.md  CHAT_WORKFLOW_DEEP_DIVE.md  CHAT_WORKFLOW_DEEP_DIVE_ANALYSIS.md  CIRCULAR_IMPORT_ANALYSIS_REPORT.md  CLI_IMPROVEMENTS.md  CLI_MANAGEMENT_GUIDE.md  CODE_ANALYSIS_SUMMARY.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_CAPABILITY_ANALYSIS.md  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_INTEGRATION_ANALYSIS.md  COMPREHENSIVE_LEGACY_CODE_ANALYSIS_REPORT.md  COMPREHENSIVE_WORKFLOW_LANGGRAPH_ANALYSIS.md  CONNECTION_LEAK_FIX.md  CONSOLIDATION_RECOMMENDATIONS.md  CRITICAL_ISSUES_SUMMARY.md  DATABASE_SEEDING_FIXES_REPORT.md  (+176 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  quality.yml
alembic/: __init__.py  env.py
alembic/versions/: 001_add_constraints.py  001_add_tool_server_support.py  001_remote_tool_servers.py  001_workflow_templates.py  002_add_dynamic_embeddings.py  002_add_missing_columns.py  003_add_model_registry.py  __init__.py  add_audit_logs_table.py  add_embedding_field.py  add_user_prefs_indexes.py  c7a2069f99cb_add_rating_columns_to_messages.py  ef29b1af6dfe_add_workflow_config_column_to_.py  hybrid_vector_search.py  remove_workflow_type_enum.py  simplify_workflow_execution.py  ulid_migration.py
chatter/: __init__.py  __main__.py  api_cli.py  api_cli_improved.py  cli.py  cli_old.py  config.py  main.py
chatter/api/: __init__.py  ab_testing.py  agents.py  analytics.py  auth.py  chat.py  conversations.py  data_management.py  dependencies.py  documents.py  events.py  health.py  jobs.py  model_registry.py  new_documents.py  plugins.py  profiles.py  prompts.py  real_time_analytics.py  resources.py  toolserver.py  webhooks.py  workflows.py
chatter/commands/: __init__.py  agents.py  analytics.py  auth.py  chat.py  config.py  documents.py  events.py  health.py  jobs.py  models.py  plugins.py  profiles.py  prompts.py
chatter/core/: __init__.py  agents.py  analytics.py  analytics_exceptions.py  audit_adapter.py  auth.py  cache.py  cache_factory.py  cache_interface.py  chat.py  chat_backup.py  chat_deprecated.py  custom_retriever.py  dependencies.py  documents.py  dynamic_embeddings.py  events.py  (+50 more)
data/: chatter.db
docs/: API_CONVERSION_EXAMPLE.md  API_CONVERSION_SUMMARY_TABLE.md  API_DEPENDENCY_INJECTION_CONVERSION_REPORT.md  API_KEY_AUTHENTICATION.md  BACKEND_CONVERSION_ANALYSIS.md  BREAKING_CHANGES_CLEANUP.md  BROWSER_CACHE_ISSUES.md  CACHE_DISABLE.md  CHAT_REQUEST_CONSOLIDATION.md  CLI_REFACTORING.md  CONVERSION_ACTION_ITEMS.md  CONVERSION_ANALYSIS_INDEX.md  CONVERSION_TECHNICAL_DEEP_DIVE.md  DATABASE_CONSTRAINTS.md  DATABASE_SEEDING.md  DEVELOPMENT.md  ERROR_HANDLING_FIXES.md  FEATURE_ANALYSIS_EXECUTIVE_SUMMARY.md  FEATURE_ANALYSIS_README.md  FEATURE_ANALYSIS_REPORT.md  FEATURE_ANALYSIS_SUMMARY.md  FRONTEND_ANALYSIS_README.md  FRONTEND_TODO_ANALYSIS.md  FRONTEND_TYPE_SAFETY_AUDIT.md  FUNCTION_SIGNATURE_AUDIT.md  INDEX.md  LINTING_AND_ANALYSIS.md  PRIORITIZED_ACTION_PLAN.md  README.md  STATIC_WORKFLOW_MODE_REMOVAL_COMPLETE.md  SYSTEM_ANALYSIS.md  WORKFLOW_ACTION_CHECKLIST.md  WORKFLOW_ANALYSIS_EXECUTIVE_SUMMARY.md  WORKFLOW_ANALYSIS_INDEX.md  WORKFLOW_ANALYSIS_MASTER_INDEX.md  WORKFLOW_ANALYSIS_QUICKREF.md  WORKFLOW_ANALYSIS_README.md  WORKFLOW_ANALYSIS_SUMMARY.md  WORKFLOW_COMPARISON_REPORT.md  WORKFLOW_DEEP_ANALYSIS_PHASE1.md  (+34 more)
examples/: README.md  api_temporary_template_example.py  enhanced_workflow_demo.py  production_enhancements_demo.py  sdk_temporary_template_example.py  simple_events_demo.py  temporary_template_execution_example.py  unified_events_demo.py
frontend/: .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  FRONTEND_IMPROVEMENTS.md  README.md  debug_streaming.js  eslint.config.js  package-lock.json  package.json  test_error.txt  test_results.txt  test_streaming_parsing.js  tsconfig.json  vite.config.ts  vitest.config.ts
migrations/: 001_add_performance_indexes.py  002_add_model_registry_indexes.py  003_add_user_phone_number.py
reports/: test_report.html
scripts/: SDK_REFACTORING.md  __init__.py  __main__.py  audit_function_signatures.py  generate_all.py  generate_openapi.py  generate_sdk.py  generate_sdks.py  generate_ts.py  generate_ts_apis.py  generate_ts_models.py  generate_typescript_sdk.py  health_check.sh  lint_all.sh  lint_backend.py  lint_frontend.sh  migrate_cache.py  migrate_frontend.py  seed_database.py  test_automation.py  train_truncated_svd.py  verify_test_db.py
sdk-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.esm.json  tsconfig.json
tests/: API_TESTS_README.md  README.md  __init__.py  conftest.py  conftest.py.backup  debug_conftest.py  test_ab_testing_integration.py  test_ab_testing_unit.py  test_agent_completion.py  test_agents_integration.py  test_agents_unit.py  test_analytics_integration.py  test_analytics_todo_implementations.py  test_analytics_unit.py  test_api_ab_testing.py  test_api_agents.py  test_api_analytics.py  test_api_auth.py  test_api_chat.py  test_api_cli.py  test_api_data_management.py  test_api_documents.py  test_api_events.py  test_api_health.py  test_api_jobs.py  test_api_model_registry.py  test_api_plugins.py  test_api_profiles.py  test_api_prompts.py  test_api_toolserver.py  test_api_validation.py  test_async_langgraph_methods.py  test_auth_direct.py  test_auth_integration.py  test_auth_security_comprehensive.py  test_auth_security_integration.py  test_auth_unit.py  test_builtin_tools_database.py  test_cache_disable.py  test_chat_request_consolidation.py  (+192 more)
(+2889 files in other folders)
